--- a/module1.css
+++ b/module1.css
@@ -15,7 +15,7 @@ opacity: 0.7;
 }
 #four
 { 
-	background-color: #FFF8DC	;
+	background-color: #6a5scd;
 	height: 40px;
 	border-radius: 10px;
 	padding-top: 5px;
@@ -27,7 +27,7 @@ opacity: 0.7;
 	margin-top:50px; 
 	
 	background-repeat: no-repeat;
-	margin-left: 50px;
+	margin-left: 20px;
 }
 
 body
