--- a/module1.css
+++ b/module1.css
@@ -7,27 +7,26 @@ margin-left:200px;
 #clogin
 {
 margin-top:10px;
-margin-left:750px;
+margin-left:500px;
 background-color: #C0C0C0;
 width:30%;
 border-radius: 6px;
-opacity: 0.7;
+opacity: 0.75;
 }
 #four
 { 
-	background-color: #6a5scd;
+	background-color: gray;
 	height: 40px;
 	border-radius: 10px;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	opacity: 0.7;
+	opacity: 0.75;
 }
 #smallt
 {
 	margin-top:50px; 
 	
 	background-repeat: no-repeat;
-	margin-left: 20px;
 }
 
 body
@@ -43,7 +42,7 @@ body
 #img
 {
 
-	margin-left:850px;
+	margin-left:600px;
 	width: 170px;
 	height: 170px;
 }
